Logic attached for data assurance for Anomaly Detection

--- a/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
+++ b/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
@@ -91,6 +91,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.01 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%time"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -117,7 +139,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def duplicated_indicies(data):\n",
+    "    \n",
+    "    ''' This function returns the number of row index for duplicated elements '''\n",
+    "    \n",
+    "    return data[data.duplicated()].index\n",
+    "\n",
+    "\n",
+    "def determine_class_imbalance(data, col):\n",
+    "    \n",
+    "    ''' This function determines the class imbalace associated with the target class '''\n",
+    "    \n",
+    "    return data[col].value_counts()\n",
+    "\n",
+    "\n",
+    "def correct_category_datatype(data, cols):\n",
+    "    \n",
+    "    ''' This function corrects category type variables'''\n",
+    "    \n",
+    "    return data[cols].astype('category')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Generic Data Overview**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns not shared across train/test dataset : {'Unusual'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Columns not shared across train/test dataset : {}'.format(set(train_df.columns) - set(test_df.columns)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The train/test split for data : 0.25 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The train/test split for data : {} '.format(round(len(test_df)/len(train_df),2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Dataframe dimensions (36904, 14)\n",
+      "Training Dataframe dimensions (9158, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Training Dataframe dimensions {}'.format(train_df.shape))\n",
+    "print('Training Dataframe dimensions {}'.format(test_df.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 36904 entries, 0 to 36903\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   Time         36904 non-null  object \n",
+      " 1   CellName     36904 non-null  object \n",
+      " 2   PRBUsageUL   36904 non-null  float64\n",
+      " 3   PRBUsageDL   36904 non-null  float64\n",
+      " 4   meanThr_DL   36904 non-null  float64\n",
+      " 5   meanThr_UL   36904 non-null  float64\n",
+      " 6   maxThr_DL    36904 non-null  float64\n",
+      " 7   maxThr_UL    36904 non-null  float64\n",
+      " 8   meanUE_DL    36904 non-null  float64\n",
+      " 9   meanUE_UL    36904 non-null  float64\n",
+      " 10  maxUE_DL     36815 non-null  float64\n",
+      " 11  maxUE_UL     36815 non-null  float64\n",
+      " 12  maxUE_UL+DL  36899 non-null  object \n",
+      " 13  Unusual      36904 non-null  int64  \n",
+      "dtypes: float64(10), int64(1), object(3)\n",
+      "memory usage: 3.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Helper Functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated Rows : 106\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Duplicated Rows :', len(duplicated_indicies(train_df)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    26721\n",
+       "1    10183\n",
+       "Name: Unusual, dtype: int64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "determine_class_imbalance(train_df, 'Unusual')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df[['CellName', 'maxUE_UL+DL']] = correct_category_datatype(train_df, ['CellName', 'maxUE_UL+DL'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +464,7 @@
        "4      0.168      1.011      1.011       2.0       1.0           3        0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,10 +475,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRBUsageUL</th>\n",
+       "      <th>PRBUsageDL</th>\n",
+       "      <th>meanThr_DL</th>\n",
+       "      <th>meanThr_UL</th>\n",
+       "      <th>maxThr_DL</th>\n",
+       "      <th>maxThr_UL</th>\n",
+       "      <th>meanUE_DL</th>\n",
+       "      <th>meanUE_UL</th>\n",
+       "      <th>maxUE_DL</th>\n",
+       "      <th>maxUE_UL</th>\n",
+       "      <th>Unusual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "      <td>36815.000000</td>\n",
+       "      <td>36815.000000</td>\n",
+       "      <td>36904.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.835090</td>\n",
+       "      <td>2.106396</td>\n",
+       "      <td>0.560525</td>\n",
+       "      <td>0.067610</td>\n",
+       "      <td>17.764369</td>\n",
+       "      <td>1.791974</td>\n",
+       "      <td>1.173441</td>\n",
+       "      <td>0.665143</td>\n",
+       "      <td>4.190819</td>\n",
+       "      <td>3.063371</td>\n",
+       "      <td>0.275932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.428206</td>\n",
+       "      <td>2.247514</td>\n",
+       "      <td>0.727623</td>\n",
+       "      <td>0.186555</td>\n",
+       "      <td>15.739932</td>\n",
+       "      <td>5.028928</td>\n",
+       "      <td>0.214065</td>\n",
+       "      <td>0.535493</td>\n",
+       "      <td>1.772484</td>\n",
+       "      <td>1.387446</td>\n",
+       "      <td>0.446989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.213000</td>\n",
+       "      <td>0.707000</td>\n",
+       "      <td>0.140000</td>\n",
+       "      <td>0.021000</td>\n",
+       "      <td>5.710750</td>\n",
+       "      <td>0.362000</td>\n",
+       "      <td>1.041000</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.547000</td>\n",
+       "      <td>1.314000</td>\n",
+       "      <td>0.352000</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>14.170000</td>\n",
+       "      <td>0.703000</td>\n",
+       "      <td>1.112000</td>\n",
+       "      <td>1.011000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12.126000</td>\n",
+       "      <td>2.728000</td>\n",
+       "      <td>0.718000</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>25.059500</td>\n",
+       "      <td>1.242000</td>\n",
+       "      <td>1.263000</td>\n",
+       "      <td>1.051000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>51.333000</td>\n",
+       "      <td>77.505000</td>\n",
+       "      <td>19.601000</td>\n",
+       "      <td>12.461000</td>\n",
+       "      <td>140.008000</td>\n",
+       "      <td>48.253000</td>\n",
+       "      <td>2.915000</td>\n",
+       "      <td>2.668000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         PRBUsageUL    PRBUsageDL    meanThr_DL    meanThr_UL     maxThr_DL  \\\n",
+       "count  36904.000000  36904.000000  36904.000000  36904.000000  36904.000000   \n",
+       "mean       7.835090      2.106396      0.560525      0.067610     17.764369   \n",
+       "std        8.428206      2.247514      0.727623      0.186555     15.739932   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%        1.213000      0.707000      0.140000      0.021000      5.710750   \n",
+       "50%        4.547000      1.314000      0.352000      0.040000     14.170000   \n",
+       "75%       12.126000      2.728000      0.718000      0.075000     25.059500   \n",
+       "max       51.333000     77.505000     19.601000     12.461000    140.008000   \n",
+       "\n",
+       "          maxThr_UL     meanUE_DL     meanUE_UL      maxUE_DL      maxUE_UL  \\\n",
+       "count  36904.000000  36904.000000  36904.000000  36815.000000  36815.000000   \n",
+       "mean       1.791974      1.173441      0.665143      4.190819      3.063371   \n",
+       "std        5.028928      0.214065      0.535493      1.772484      1.387446   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%        0.362000      1.041000      0.010000      3.000000      2.000000   \n",
+       "50%        0.703000      1.112000      1.011000      4.000000      3.000000   \n",
+       "75%        1.242000      1.263000      1.051000      5.000000      4.000000   \n",
+       "max       48.253000      2.915000      2.668000     12.000000     12.000000   \n",
+       "\n",
+       "            Unusual  \n",
+       "count  36904.000000  \n",
+       "mean       0.275932  \n",
+       "std        0.446989  \n",
+       "min        0.000000  \n",
+       "25%        0.000000  \n",
+       "50%        0.000000  \n",
+       "75%        1.000000  \n",
+       "max        1.000000  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,11 +680,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Missing Value Treatment**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def identify_missing_values(train_data):\n",
+    "\n",
+    "    ''' This function identifies the amount of missing data per variable'''\n",
+    "    \n",
+    "    print('Nan values =', train_data.isnull().sum().sum())\n",
+    "    print(\"\"\"\"\"\")\n",
+    "\n",
+    "    vars_with_missing = []\n",
+    "\n",
+    "    for feature in train_data.columns:\n",
+    "        missings = train_data[feature].isna().sum()\n",
+    "\n",
+    "        if missings > 0 :\n",
+    "            vars_with_missing.append(feature)\n",
+    "            missings_perc = missings / train_data.shape[0]\n",
+    "\n",
+    "            print('Variable {} has {} records ({:.2%}) with missing values.'.format(feature, missings, missings_perc))\n",
+    "    print('In total, there are {} variables with missing values'.format(len(vars_with_missing)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DateTime Treatment**\n",
+    "- It looks like the data has been collected at regular time intervals of 15minute periods. Transform this feature to represent this effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12:00    423\n",
+       "03:00    417\n",
+       "09:45    410\n",
+       "07:30    409\n",
+       "00:30    407\n",
+       "        ... \n",
+       "16:30    358\n",
+       "20:30    358\n",
+       "19:00    357\n",
+       "15:45    355\n",
+       "21:00    351\n",
+       "Name: Time, Length: 96, dtype: int64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.Time.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
