Updates Read Me

--- a/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
+++ b/notebooks/2021_04_06_AnomalyDetectionProject.ipynb
@@ -50,13 +50,15 @@
     "    - Unusual: labels for supervised learning. A value of 0 determines that the sample corresponds to normal operation, a value of 1 identifies unusual behavior.\n",
     "\n",
     "\n",
-    "**Algorithms to Implement**\n",
+    "**Algorithms to Implement** <br>\n",
+    "https://machinelearningmastery.com/model-based-outlier-detection-and-removal-in-python/\n",
     "- One-Class Support Vector Machines\n",
     "- Isolation Forests\n",
     "- Local Outlier Factor\n",
-    "- Elliptic Envelope\n",
+    "- Minimum Covariance Determinant (Elliptic Envelope)\n",
     "- DBSCAN\n",
-    "- Multivariate anomalie detection\n",
+    "\n",
+    "**Plot Results and Decision Boundaries and comment on behaviour**\n",
     "\n",
     "\n",
     "**Loss Functions to Consider**\n",
